<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/pizza_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/build" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_size"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/pizza_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tomato_sauce_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tomato_sauce"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/alfredo_sauce_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alfredo_sauce"
            android:textSize="15sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/extra_cheese_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/extra_cheese"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/extra_sauce_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/extra_sauce"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/additional_toppings"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/additional_toppings_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_topping_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/remove_topping_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/remove" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_toppings"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/selected_toppings_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/price_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/add_to_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_order"
            android:textSize="20sp" />

        <Button
            android:id="@+id/go_back_button"
            android:layout_width="197dp"
            android:layout_height="48dp"
            android:text="@string/back_to_menu"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
