<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pizza_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/pizzas_info"
        android:layout_width="410dp"
        android:layout_height="71dp"
        android:text="@string/pizza_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_image" />

    <RadioGroup
        android:id="@+id/radio_group_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pizzas_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/small_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_small" />

        <RadioButton
            android:id="@+id/medium_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_medium" />

        <RadioButton
            android:id="@+id/large_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_large" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/extra_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:text="@string/extra_cheese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_size" />

    <CheckBox
        android:id="@+id/extra_sauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/extra_sauce"
        app:layout_constraintStart_toEndOf="@+id/extra_cheese"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_size" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_sauce" />

    <Button
        android:id="@+id/add_to_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        app:layout_constraintTop_toBottomOf="@+id/price_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
