<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvStoreOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_orders"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tvOrderNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number_label"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerOrderNumber"
            android:layout_width="249dp"
            android:layout_height="36dp"
            android:layout_above="@+id/tvOrderTotal"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/tvOrderNumberLabel" />

        <TextView
            android:id="@+id/tvOrderTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_label"
            android:textSize="20sp"
            android:layout_below="@id/tvOrderNumberLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvOrderTotal"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvOrderTotalLabel"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@id/tvOrderTotalLabel"
            android:editable="false" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvOrderList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnCancelOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textSize="20sp"
            android:layout_marginStart="16dp" />
    </LinearLayout>

</LinearLayout>
