<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_ru_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/ru_pizza"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_specialty_pizzas"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="60dp"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_build_your_own"
        app:layout_constraintTop_toBottomOf="@id/text_ru_pizza"
        app:srcCompat="@drawable/specialty" />

    <ImageButton
        android:id="@+id/button_build_your_own"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/button_specialty_pizzas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ru_pizza"
        app:srcCompat="@drawable/buildyourown" />

    <ImageButton
        android:id="@+id/button_current_order"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_store_orders"
        app:layout_constraintTop_toBottomOf="@id/button_specialty_pizzas"
        app:srcCompat="@drawable/currentorders" />

    <ImageButton
        android:id="@+id/button_store_orders"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/button_current_order"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_build_your_own"
        app:srcCompat="@drawable/storeorders" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/specialty_pizzas"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/button_specialty_pizzas"
        app:layout_constraintLeft_toLeftOf="@id/button_specialty_pizzas"
        app:layout_constraintRight_toRightOf="@id/button_specialty_pizzas"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/build_your_own"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/button_build_your_own"
        app:layout_constraintLeft_toLeftOf="@id/button_build_your_own"
        app:layout_constraintRight_toRightOf="@id/button_build_your_own"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/current_order"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/button_current_order"
        app:layout_constraintLeft_toLeftOf="@id/button_current_order"
        app:layout_constraintRight_toRightOf="@id/button_current_order"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/store_orders"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintLeft_toLeftOf="@id/button_store_orders"
        app:layout_constraintRight_toRightOf="@id/button_store_orders"
        app:layout_constraintTop_toBottomOf="@id/button_store_orders" />

</androidx.constraintlayout.widget.ConstraintLayout>
